--- a/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
@@ -1,20 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <title>El Coliseo Deportivo</title>
-        <link rel="icon" type="image/png" href="img/icon.png">
-        <link rel="stylesheet" href="css/main.css">
+        
+        <link rel="icon" type="image/png" th:href="@{/img/icon.png}">
+        <link rel="stylesheet" th:href="@{/css/main.css}">
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     </head>
     <body>
-        <div>
+        <div th:fragment="header">
             <!-- NAVBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark" id="navegacion">
                 <div class="container">
-                    <a class="navbar-brand" th:href="@{/home}">
+                    <a class="navbar-brand" th:href="@{/user/home}">
                         <img th:src="@{/img/logo.png}" alt="" width="150">
                     </a>
 
@@ -30,22 +31,20 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto text-center">
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/usuarios}">Usuarios</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sede}">Centros Deportivos</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/deportes}">Deportes</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/horarios}">Horarios</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/canchas}">Canchas</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/reservas}">Reservas</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" onclick="window.location.reload();" th:href="@{/logout}">Cerrar</a></li>
+                        	<li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/role/listar}">Roles</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/user/listar}">Usuarios</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportcenter/listar}">Centros Deportivos</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sport/listar}">Deportes</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/schedule/listar}">Horarios</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportfield/listar}">Canchas</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/booking/listar}">Reservas</a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
           
         </div>
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-        <noscript> alert('Esta Pagina usa JavaScript') </noscript>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     </body>
 </html>
