--- a/COLISEODEPORTIVO/bin/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/bin/src/main/resources/templates/fragments/header.html
@@ -37,6 +37,7 @@
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sport/listar}">Deportes</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/schedule/listar}">Horarios</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportfield/listar}">Canchas</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/fieldschedule/listar}">Gestion de Horarios</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/booking/listar}">Reservas</a></li>
                         </ul>
                     </div>
