--- a/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
             <!-- NAVBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark" id="navegacion">
                 <div class="container">
-                    <a class="navbar-brand" th:href="@{/user/home}">
+                    <a class="navbar-brand" th:href="@{/welcome/home}">
                         <img th:src="@{/img/logo.png}" alt="" width="150">
                     </a>
 
@@ -39,6 +39,7 @@
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportfield/listar}">Canchas</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/fieldschedule/listar}">Gestion de Horarios</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/booking/listar}">Reservas</a></li>
+                            <!-- <li class="nav-item btn-lg"><form method="POST" th:action="@{/logout}"><a class="nav-link" id="an-opciones" href="#" onclick="this.parentNode.submit();">Cerrar</a></form></li>-->
                         </ul>
                     </div>
                 </div>
