--- a/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
@@ -31,8 +31,8 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto text-center">
-                        	<li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/role/listar}">Roles</a></li>
-                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/user/listar}">Usuarios</a></li>
+                        	<!-- <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/role/listar}">Roles</a></li>
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/user/listar}">Usuarios</a></li> -->
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportcenter/listar}">Centros Deportivos</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sport/listar}">Deportes</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/schedule/listar}">Horarios</a></li>
