--- a/COLISEODEPORTIVO/src/main/resources/templates/login.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/login.html
@@ -11,16 +11,16 @@
     </head>
 	<body>
 
-		<div class="container py-4">
+		<div class="container py-4 col-3">
 			<div class="card bg-light">
-				<div class="card-header text-white bg-dark text-center">Ingresa!</div>
+				<div class="card-header text-white bg-dark text-center">BIENVENIDO AL COLISEO DEPORTIVO</div>
 					<div class="card-body">
 						<form th:action="@{/login}" method="post">
 							<div>
 								<div>
 									<div class="form-group col pt-3">
 										<input type="text" name="username" id="username"
-											class="form-control" placeholder="UserName" autofocus="true"
+											class="form-control" placeholder="Username" autofocus="true"
 											required="true" />
 									</div>
 								<div class="form-group col pt-3">
@@ -29,7 +29,7 @@
 									</div>
 								</div>
 							<div class="form-group col pt-3">
-								<input type="submit" class="btn btn-lg btn-primary btn-block container"
+								<input type="submit" class="btn btn-lg btn-success btn-block container"
 										value="Sign In" />
 								</div>
 							</div>
