--- a/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
@@ -39,7 +39,7 @@
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/sportfield/listar}">Canchas</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/fieldschedule/listar}">Gestion de Horarios</a></li>
                             <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/booking/listar}">Reservas</a></li>
-                            <!-- <li class="nav-item btn-lg"><form method="POST" th:action="@{/logout}"><a class="nav-link" id="an-opciones" href="#" onclick="this.parentNode.submit();">Cerrar</a></form></li>-->
+                            <li class="nav-item btn-lg"><a class="nav-link" id="an-opciones" th:href="@{/logout}">Cerrar Sesion</a></li>
                         </ul>
                     </div>
                 </div>
