--- a/COLISEODEPORTIVO/src/main/resources/templates/login.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/login.html
@@ -13,7 +13,9 @@
 
 		<div class="container py-4 col-3">
 			<div class="card bg-light">
-				<div class="card-header text-white bg-dark text-center">BIENVENIDO AL COLISEO DEPORTIVO</div>
+				<div class="card-header text-white bg-dark text-center">
+				<img th:src="@{/img/logo.png}" alt="" width="150">
+				</div>
 					<div class="card-body">
 						<form th:action="@{/login}" method="post">
 							<div>
@@ -23,15 +25,22 @@
 											class="form-control" placeholder="Username" autofocus="true"
 											required="true" />
 									</div>
-								<div class="form-group col pt-3">
+									<div class="form-group col pt-3">
 										<input type="password" name="password" id="password"
 											class="form-control" placeholder="Password" required="true" />
 									</div>
 								</div>
-							<div class="form-group col pt-3">
-								<input type="submit" class="btn btn-lg btn-success btn-block container"
-										value="Sign In" />
+								
+								<div class="form-group col pt-3">
+									<input type="submit" class="btn btn-lg btn-success btn-block container"
+										value="Ingresar" />
 								</div>
+								
+								<div class="form-group col pt-3">
+									<a type="button" th:href="@{/user/irRegistrar}" class="btn btn-lg btn-primary btn-block container"> 
+									Registrarte </a>
+								</div>
+								
 							</div>
 							<input type="hidden" th:name="${_csrf.parameterName}"
 								th:value="${_csrf.token}" />
@@ -39,6 +48,6 @@
 					</div>
 			</div>
 		</div>
-
+		
 	</body>
 </html>
