--- a/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
             <!-- NAVBAR -->
             <nav class="navbar navbar-expand-lg navbar-dark" id="navegacion">
                 <div class="container">
-                    <a class="navbar-brand" th:href="@{/welcome/home}">
+                    <a class="navbar-brand" th:href="@{/welcome/}">
                         <img th:src="@{/img/logo.png}" alt="" width="150">
                     </a>
 
