--- a/COLISEODEPORTIVO/src/main/resources/templates/login.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/login.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" th:href="@{/css/main.css}">
         <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
     </head>
-	<body>
+	<body id="login-bg">
 
-		<div class="container py-4 col-3">
+		<div class="container py-4 col-3 mt-5">
 			<div class="card bg-light">
 				<div class="card-header text-white bg-dark text-center">
 				<img th:src="@{/img/logo.png}" alt="" width="150">
