--- a/COLISEODEPORTIVO/src/main/resources/templates/schedule.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/schedule.html
@@ -30,7 +30,7 @@
             <div class="col-md-3 form-group">
               	<label for="start" class="form-label">Hora de Inicio:</label>
               	<input type="text" class="form-control" id="start" value="7:00 AM" required th:field="*{scheduleStart}">
-              	<small class="form-text text-danger" th:if="${#fields.hasErrors('scheduleStart')}" th:errors="*{scheduleStart}"></small>
+              	<div class="alert alert-danger" th:if="${#fields.hasErrors('scheduleStart')}" th:errors="*{scheduleStart}"></div>
             	<div class="valid-feedback">
                 	Correcto!
             	</div>
@@ -39,7 +39,7 @@
             <div class="col-md-3 form-group">
               	<label for="end" class="form-label">Hora de Fin:</label>
               	<input type="text" class="form-control" id="end" value="8:00 AM" required th:field="*{scheduleEnd}">
-              	<small class="form-text text-danger" th:if="${#fields.hasErrors('scheduleEnd')}" th:errors="*{scheduleEnd}"></small>
+              	<div class="alert alert-danger" th:if="${#fields.hasErrors('scheduleEnd')}" th:errors="*{scheduleEnd}"></div>
             	<div class="valid-feedback">
                 	Correcto!
             	</div>
