--- a/COLISEODEPORTIVO/src/main/resources/templates/sportcenter.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/sportcenter.html
@@ -30,7 +30,7 @@
             <div class="col-md-3 form-group">
               	<label for="name" class="form-label">Nombre:</label>
               	<input type="text" class="form-control" id="name" value="Lima Centro 1" required th:field="*{sportcenterName}">
-              	<small class="form-text text-danger" th:if="${#fields.hasErrors('sportcenterName')}" th:errors="*{sportcenterName}"></small>
+              	<div class="alert alert-danger" th:if="${#fields.hasErrors('sportcenterName')}" th:errors="*{sportcenterName}"></div>
             	<div class="valid-feedback">
                 	Correcto!
             	</div>
@@ -39,7 +39,7 @@
             <div class="col-md-6 form-group">
               	<label for="direccion" class="form-label">Dirección:</label>
               	<input type="text" class="form-control" id="direccion" value="Av./Ca./Jr./Psj.   XXXX  123 - Urb. XXXX " required th:field="*{sportcenterAddress}">
-              	<small class="form-text text-danger" th:if="${#fields.hasErrors('sportcenterAddress')}" th:errors="*{sportcenterAddress}"></small>
+              	<div class="alert alert-danger" th:if="${#fields.hasErrors('sportcenterAddress')}" th:errors="*{sportcenterAddress}"></div>
             	<div class="valid-feedback">
                 	Correcto!
             	</div>
