--- a/COLISEODEPORTIVO/src/main/resources/templates/sportfield.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/sportfield.html
@@ -31,7 +31,7 @@
             <div class="col-md-3 form-group">
               	<label for="name" class="form-label">Nombre:</label>
               	<input type="text" class="form-control" id="name" value="Cancha #1" required th:field="*{sportfieldName}">
-              	<small class="form-text text-danger" th:if="${#fields.hasErrors('sportfieldName')}" th:errors="*{sportfieldName}"></small>
+              	<div class="alert alert-danger" th:if="${#fields.hasErrors('sportfieldName')}" th:errors="*{sportfieldName}"></div>
             	<div class="valid-feedback">
                 	Correcto!
             	</div>
