--- a/COLISEODEPORTIVO/src/main/resources/templates/booking.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/booking.html
@@ -82,6 +82,29 @@
 
       	</div>
       	
+      	 <script>
+           var today = new Date();
+           var dd = today.getDate();
+           var mm = today.getMonth()+1; //January is 0 so need to add 1 to make it 1!
+           var Maxmm = today.getMonth()+2;
+           var yyyy = today.getFullYear();
+           if(dd<10){
+             dd='0'+dd
+           } 
+           if(mm<10){
+             mm='0'+mm
+           } 
+           
+           if(Maxmm<10){
+        	   Maxmm='0'+Maxmm
+             } 
+
+           today = yyyy+'-'+mm+'-'+dd;
+           future = yyyy+'-'+Maxmm+'-'+dd;
+           document.getElementById("bookingdate").setAttribute("min", today); 
+           
+           document.getElementById("bookingdate").setAttribute("max", future); 
+           </script>
       	
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
        
