--- a/COLISEODEPORTIVO/src/main/resources/templates/booking.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/booking.html
@@ -22,10 +22,10 @@
         	
         	<!--DATOS-->
         	
-        	<div class="col-md-1">
+        	<!-- <div class="col-md-1">
                 <label for="bookingid" class="form-label">ID:</label>
                 <input type="text" class="form-control" th:field="*{bookingId}">
-            </div>
+            </div> -->
             
             <div class="col-md-3">
               <label for="user" class="form-label">Usuario:</label>
