--- a/COLISEODEPORTIVO/src/main/resources/templates/user.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/user.html
@@ -21,10 +21,10 @@
         	
         	<!--DATOS-->
         	
-        	<div class="col-md-1">
+        	<!-- <div class="col-md-1">
                 <label for="userid" class="form-label">ID:</label>
                 <input type="text" class="form-control" th:field="*{userId}">
-            </div>
+            </div> -->
             
             <!-- <div class="col-md-2">
               <label for="role" class="form-label">Rol:</label>
