--- a/COLISEODEPORTIVO/src/main/resources/templates/sport.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/sport.html
@@ -24,7 +24,7 @@
         	
         	<div class="col-md-1">
                 <label for="sportid" class="form-label">ID:</label>
-                <input type="text" class="form-control" th:field="*{sportId}">
+                <input type="text" required class="form-control" th:field="*{sportId}">
             </div>
                    	
             <div class="col-md-3 form-group">
