--- a/COLISEODEPORTIVO/src/main/resources/templates/booking.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/booking.html
@@ -14,6 +14,7 @@
 	
 		<div class="container mt-5">
 			<h2 style="color:white;">Reservas</h2>
+			<div class="bg-danger p-3" th:if="${mensaje != null}" th:text="${mensaje}"></div>
 		</div>
 		<!-- FORMULARIO REGSITRAR-->
         <div class="container mt-5" id="formulario" >
