--- a/COLISEODEPORTIVO/src/main/resources/templates/schedule.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/schedule.html
@@ -14,7 +14,9 @@
 	
 		<div class="container mt-5">
 			<h2 style="color:white;">Horarios</h2>
+			<div class="bg-danger p-3" th:if="${mensaje != null}" th:text="${mensaje}"></div>
 		</div>
+		
 		<!-- FORMULARIO REGSITRAR-->
         <div class="container mt-5" id="formulario" >
 
