get schedule by id

--- a/COLISEODEPORTIVO/src/main/resources/templates/booking.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/booking.html
@@ -65,7 +65,7 @@
             
             <div class="col-md-3 form-group">
               	<label for="bookingdate">Fecha Reserva:</label>
-				<input type="date" class="form-control" th:field="*{bookingDate}" id="bookingdate"></input>
+				<input type="date" required class="form-control" th:field="*{bookingDate}" id="bookingdate"></input>
               	<div class="alert alert-danger" th:if="${#fields.hasErrors('bookingDate')}" th:errors="*{bookingDate}"></div>
             	<div class="valid-feedback">
                 	Correcto!
