--- a/COLISEODEPORTIVO/src/main/resources/templates/user.html
+++ b/COLISEODEPORTIVO/src/main/resources/templates/user.html
@@ -13,6 +13,7 @@
 	
 		<div class="container mt-5">
 			<h2 style="color:white;">Registrar Usuario</h2>
+			<div class="bg-danger p-3" th:if="${mensaje != null}" th:text="${mensaje}"></div>
 		</div>
 		<!-- FORMULARIO REGSITRAR-->
         <div class="container mt-5" id="formulario" >
